--- a/admin/package.json
+++ b/admin/package.json
@@ -31,7 +31,11 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
